--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  @apply relative min-h-screen bg-black font-inter text-gray-100;
+  @apply relative min-h-screen scroll-smooth bg-black font-inter text-gray-100;
 }
 
 body {
