--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,10 +60,7 @@
 
 /* Toastify */
 .Toastify__toast-container {
-  @apply z-[99999] !important;
-}
-.Toastify__toast-body {
-  @apply font-inter text-foreground !important;
+  @apply z-[99999] font-inter text-foreground bg-background !important;
 }
 .Toastify__toast {
   @apply bg-background !important;
